@@ -35,7 +35,7 @@
                 keepFieldValues: "[name='csrfmiddlewaretoken']",
                 addCssClass: 'btn btn-success add-row',
                 deleteCssClass: 'delete-row',
-                addText: '{% trans "Add manday" %}',
+                addText: '{% trans "Add" %}',
                 deleteText: '{% trans "Remove" %}', 
             });
         });
