@@ -58,6 +58,26 @@ span.aggregation {
 }
 
 
+
+.intervention .form-row.inline.controls label {
+    width: auto;
+    float: none;
+    display: inline-block;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.intervention .form-horizontal .formset .controls {
+    margin-left: 0px;
+    display: inline-block;
+}
+
+.intervention .formset .control-group {
+    display: inline-block;
+}
+
+
+
 /*
  * Trek and POIs markers
  */
